--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "check": "biome check --write .",
+    "format": "biome format --write .",
+    "lint": "biome lint ."
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -29,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.15",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.2.3",
