--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tauri-apps/plugin-store": "^2.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-yaml": "^4.1.1",
     "lucide-react": "^0.564.0",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
