--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "nest start --watch",
     "build": "nest build",
-    "start": "node dist/main",
-    "start:prod": "node dist/main"
+    "start": "node dist/main"
   },
   "dependencies": {
     "@prompt-pad/shared": "workspace:*",
