refactor(biome): Exclude dist, .turbo, src-tauri from formatting
- Changed `includes` to `excludes` for specific directories
- Ensures these directories are not processed by Biome

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "includes": ["**", "!!**/dist", "!!**/.turbo", "!!**/src-tauri"]
+    "includes": ["**", "!**/dist", "!**/.turbo", "!**/src-tauri"]
   },
   "formatter": {
     "enabled": true,
