chore(package): update dependencies and clean script
- Replaced `rm -rf` with `rimraf` for cross-platform compatibility
- Added `rimraf` to dev dependencies

--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "tauri:build": "pnpm --filter @prompt-pad/desktop tauri build",
     "build:desktop": "turbo run build --filter=@prompt-pad/desktop",
     "build:backend": "turbo run build --filter=@prompt-pad/backend",
-    "clean": "rm -rf .turbo apps/*/dist packages/*/dist apps/*/*.tsbuildinfo packages/*/*.tsbuildinfo apps/*/node_modules packages/*/node_modules node_modules"
+    "clean": "rimraf .turbo apps/*/dist packages/*/dist apps/*/*.tsbuildinfo packages/*/*.tsbuildinfo apps/*/node_modules packages/*/node_modules node_modules"
   },
   "devDependencies": {
     "turbo": "^2",
-    "@biomejs/biome": "^2.3.15"
+    "@biomejs/biome": "^2.3.15",
+    "rimraf": "^5.0.7"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
