chore: remove unused check task in turbo.json
- Removed `dependsOn` from check task
- Simplified turbo.json configuration

--- a/turbo.json
+++ b/turbo.json
@@ -9,8 +9,6 @@
       "cache": false,
       "persistent": true
     },
-    "check": {
-      "dependsOn": ["^build"]
-    }
+    "check": {}
   }
 }
